Fix card header overflow

--- a/web-app/pages/_app.css
+++ b/web-app/pages/_app.css
@@ -2,3 +2,7 @@
 a {
     text-decoration: none;
 }
+
+.MuiCardHeader-content {
+    max-width: 100%;
+}
